# pyvmess

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: build.yml  lint.yml  test.yml
pyvmess/: __about__.py  __init__.py  pyvmess.py
tests/: __init__.py  test_qwb2022.py
tests/data/: client.text  server.text
